<resources>
    <string name="app_name">LaverPool</string>
    <string name="masuk">Masuk</string>
    <string name="selamat_datang_di_laverpool">SELAMAT DATANG DI LAVERPOOL!!</string>
    <string name="aplikasi_yang_bikin_hidup_kamu_lebih_nyaman_siap_bantuin_semua_kebutuhanmu_kapan_pun_dan_dimana_pun">Aplikasi yang bikin hidup kamu lebih nyaman, Siap bantuin semua kebutuhanmu, kapan pun, dan dimana pun.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="usernamee">Username</string>
    <string name="e">Username*</string>
    <string name="email">Email*</string>
    <string name="cth_thomas_slebew">Cth: Thomas Slebew</string>
    <string name="cth_nama_email_com">Cth: nama@email.com</string>
    <string name="passwordd">Password*</string>
    <string name="mau_makan_apa_hari_ini">Mau makan apa hari ini?</string>
    <string name="tambah_pesanan">Tambah Pesanan</string>
    <string name="id_pesanan">ID Pesanan : </string>
    <string name="id_user">ID User</string>
    <string name="id_food">ID Food</string>
    <string name="id_dessert">ID Dessert</string>
    <string name="kembali_ke_menu_utama">Kembali Ke Menu Utama</string>
    <string name="logout">logout</string>
    <string name="action_settings">Settings</string>
    <string name="tingkat_kepedasan">Tingkat Kepedasan</string>
    <string name="normal">Normal</string>
    <string name="pedas">Pedas</string>
    <string name="nama">Nama</string>
    <string name="jumlah_pesanan">Jumlah Pesanan</string>
    <string name="tingkat_kepedasann">Tingkat Kepedasan</string>
    <string name="jenismiuman">Jenis Minuman</string>
    <string name="biasa">Biasa</string>
    <string name="special">Special</string>
    <string name="speciall">Special</string>
    <string name="nasi_kuning">Nasi Kuning</string>
    <string name="es_dawet_cendol">Es Dawet Cendol</string>
    <string name="teh_bandrek_telur">Teh Bandrek Telur</string>
    <string name="kue_lumpur">Kue Lumpur</string>
    <string name="kue_klepon">Kue Klepon</string>
    <string name="jenis_kue">Jenis Kue</string>
    <string name="jenis_kuee">Jenis Kue</string>
    <string name="jenis_makanan">Jenis makanan</string>
</resources>