<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnback"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:onClick="clickBack"
        android:background="@drawable/btnback" />

    <ImageView
        android:id="@+id/laverpool"
        android:layout_width="155dp"
        android:layout_height="47dp"
        android:layout_marginLeft="50dp"
        android:layout_toRightOf="@id/btnback"
        android:background="@drawable/laverpool" />

    <ImageView
        android:id="@+id/btnbantuan"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="90dp"
        android:layout_toRightOf="@id/laverpool"
        android:background="@drawable/btnbantuan" />

    <ImageView
        android:id="@+id/txtdaftar"
        android:layout_width="wrap_content"
        android:layout_height="131dp"
        android:layout_below="@id/btnback"
        android:layout_marginTop="50dp"
        android:background="@drawable/txtdaftar" />

    <TextView
        android:id="@+id/txtusername"
        android:text="@string/e"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/txtdaftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:id="@+id/un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtusername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cth_thomas_slebew"
            android:onClick="clickUsername"
            android:inputType="text"
            android:textSize="16dp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtemail"
        android:text="@string/email"
        android:textSize="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@+id/un"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        android:id="@+id/em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtemail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cth_nama_email_com"
            android:inputType="textEmailAddress"
            android:onClick="clickUsername"
            android:textSize="16dp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtpassword"
        android:text="Password"
        android:textSize="16dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_below="@id/em"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxBackgroundColor="@color/white"
        android:outlineSpotShadowColor="@color/black"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
    android:id="@+id/etpasswordd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtpassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordd"
            android:onClick="clickPassword"
            android:inputType="textPassword"
            android:textSize="16dp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btndaftar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@id/etpasswordd"
        android:layout_marginStart="260dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/btndaftar"
        android:onClick="clickLanjut" />

</RelativeLayout>